--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,32 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat App</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <p>Welcome to the chat app</p>
+<body class="chat">
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users">
 
-    <ol id="messages">
+        </div>
+    </div>
 
-    </ol>
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages">
 
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Message"/>
-        <button>Send</button>
-    </form>
+        </ol>
 
-    <button id="send-location">
-        Send Location
-    </button>
+        <div class="chat__footer">
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+                <button>Send</button>
+            </form>
+
+            <button id="send-location">
+                Send Location
+            </button>
+        </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
